# Content-Collector

./: .env.example  .gitignore  README.md  pyproject.toml
content_collector/: ai_gateway.py  api.py  cli.py  database.py  grouping.py  main.py  models.py  prompts.yaml  repositories.py  scanner.py  schemas.py  settings.py  social_xlsx.py  web.py  workflows.py
content_collector/templates/: base.html  dashboard.html  jobs.html  post_detail.html  posts.html  social.html  social_account.html
