[project]
name = "content-collector"
version = "0.1.0"
description = "Local multimodal social content collector with FastAPI, SQLite and GLM extraction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "pydantic-settings>=2.5.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "typer>=0.12.5",
  "orjson>=3.10.7",
  "python-dotenv>=1.0.1",
  "filetype>=1.2.0",
  "pillow>=10.4.0",
  "zai-sdk>=0.2.2"
]

[project.scripts]
content-collector = "content_collector.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["content_collector"]